Resolved issues flagged by SonarLint and the IDE.